kubernetes/main/apps/dragonfly-system/namespace.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/namespace_v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: dragonfly-system
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
