kubernetes/main/apps/dragonfly-system/network-policy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-allow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly
  policyTypes:
    - Ingress
  ingress:
    # Allow atlantis-system pods (locking backend)
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: atlantis-system
      ports:
        - port: 6379
          protocol: TCP
    # Allow dragonfly-operator to perform health checks on port 9999
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: dragonfly-operator
      ports:
        - protocol: TCP
          port: 9999
    # Allow kube-prometheus to scrape Dragonfly metrics on port 9999
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9999
